<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    tools:context=".ItemActivity"
    android:layout_marginTop="16dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/item_name" />

    <TextView
        android:id="@+id/item_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Вода Холодный ручей 5л негаз." />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/item_sum"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/item_sum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="12.90 Р" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/item_quantity"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/item_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/item_price"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/item_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="12.90 Р" />

    <TextView
        android:id="@+id/item_nds10_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/item_nds10"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/item_nds10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="1" />

    <TextView
        android:id="@+id/item_nds18_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/item_nds18"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/item_nds18"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="1" />
</android.widget.LinearLayout>